k8s/service-s3.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustfs-s3
  namespace: boettiger-lab
spec:
  selector:
    k8s-app: rustfs
  ports:
    - name: s3
      port: 80
      targetPort: 9000
